--- a/viz.yaml
+++ b/viz.yaml
@@ -181,6 +181,7 @@ publish:
       hashes: "url_hashes"
       projection: "custom_projection"
       map_utils: "map_utils"
+      legend_utils: "legend_utils"
       map_counties: "map_counties"
       map: "build_map"
       state_boundaries: "state_boundaries_topojson"
@@ -188,7 +189,8 @@ publish:
       county_centroids_wu: "county_centroids_wu_topojson"
     context:
       resources: ["lib_d3_js", "topojson", "header_css", "footer_css", "socialCSS",
-                  "map_css", "main_css", "hashes", "projection", "map_utils", "map_counties"]
+                  "map_css", "main_css", "hashes", "projection", "map_utils", "map_counties",
+                  "legend_utils"]
       sections: ["social","map","description_text", "directions_text"] # adding header and footer here, doubled each on the page
   -
     id: topojson
@@ -210,6 +212,10 @@ publish:
   -
     id: map_utils
     location: "js/map_utils.js"
+    mimetype: application/javascript
+  -
+    id: legend_utils
+    location: "js/legend_utils.js"
     mimetype: application/javascript
   -
     id: map_counties
@@ -265,6 +271,7 @@ publish:
       hashes: url_hashes
       projection: custom_projection
       map_utils: map_utils
+      legend_utils: legend_utils
       map_counties: map_counties
       map: build_map
       directions_text: directions_text
@@ -273,7 +280,8 @@ publish:
       county_centroids_wu: county_centroids_wu_topojson
     context:
       resources: ["lib_d3_js", "topojson", 
-                  "map_css", "main_css", "hashes", "projection", "map_utils", "map_counties"]
+                  "map_css", "main_css", "hashes", "projection", "map_utils", 
+                  "map_counties", "legend_utils"]
       embed: ["map","directions_text"]
   -
     id: description_text
