--- a/viz.yaml
+++ b/viz.yaml
@@ -287,8 +287,9 @@ publish:
       topojson: "topojson"
       header_css: "lib-header-css"
       footer_css: "lib-footer-css"
+      content_css: "lib-content-css"
       map_css: "map_css"
-      main_css: "main_css"
+      custom_css: "custom_css"
       social: "social-section"
       socialCSS: "lib-social-media-css"
       description_text: "description_text"
@@ -307,8 +308,8 @@ publish:
       county_centroids: "county_centroids_topojson"
       wu_data_15_json: "wu_data_15_json"
     context:
-      resources: ["lib_d3_js", "topojson", "header_css", "footer_css", "socialCSS",
-                  "map_css", "main_css", "hashes", "projection", "map_utils", "map_counties"]
+      resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS",
+                  "map_css", "custom_css", "hashes", "projection", "map_utils", "map_counties"]
       sections: ["social","map","description_text", "directions_text"] # adding header and footer here, doubled each on the page
   -
     id: topojson
@@ -340,8 +341,8 @@ publish:
     location: "layout/css/map.css"
     mimetype: text/css
   -
-    id: main_css
-    location: "layout/css/main.css"
+    id: custom_css
+    location: "layout/css/custom.css"
     mimetype: text/css
   -
     id: header_section
@@ -377,7 +378,7 @@ publish:
       lib_d3_js: lib-d3-js
       topojson: topojson
       map_css: map_css
-      main_css: main_css
+      custom_css: custom_css
       hashes: url_hashes
       projection: custom_projection
       map_utils: map_utils
@@ -392,7 +393,7 @@ publish:
       wu_data_15_json: wu_data_15_json
     context:
       resources: ["lib_d3_js", "topojson", 
-                  "map_css", "main_css", "hashes", "projection", "map_utils", "map_counties"]
+                  "map_css", "custom_css", "hashes", "projection", "map_utils", "map_counties"]
       embed: ["map","directions_text"]
   -
     id: description_text
