--- a/viz.yaml
+++ b/viz.yaml
@@ -56,6 +56,9 @@ info:
     sf:
       repo: CRAN
       version: 0.5.4
+    sbtools:
+      repo: CRAN
+      version: 1.1.6
       
   contributors:
     -
