--- a/preprocess.yaml
+++ b/preprocess.yaml
@@ -5,6 +5,7 @@ packages:
   - rgdal
   - dplyr
   - tibble
+  - sbtools
 
 sources:
   - scripts/preprocess/fetch_url.R
@@ -13,7 +14,7 @@ sources:
   - scripts/preprocess/process_counties.R
   - scripts/preprocess/process_counties_to_states.R
   - scripts/preprocess/process_compute_centroids.R
-  - scripts/preprocess/push_s3_object.R
+  - scripts/preprocess/push_SB_object.R
 
 targets:
   
@@ -60,19 +61,19 @@ targets:
   
   # --- publish --- #
   
-  s3_county_boundaries_json:
-    command: push_s3_object(I("county_boundaries_USA.json"), "cache/pre_county_boundaries_USA.json", I("viz-water-use-15"))
+  SB_county_boundaries_json:
+    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_county_boundaries_USA.json", I("county_boundaries_USA.json"))
                             
-  s3_state_boundaries_json:
-    command: push_s3_object(I("state_boundaries_USA.json"), "cache/pre_state_boundaries_USA.json", I("viz-water-use-15"))
+  SB_state_boundaries_json:
+    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_state_boundaries_USA.json", I("state_boundaries_USA.json"))
   
-  s3_county_centroids_json:
-    command: push_s3_object(I("county_centroids_USA.json"), "cache/pre_county_centroids_USA.json", I("viz-water-use-15"))
+  SB_county_centroids_json:
+    command: push_SB_object(I("5ab154b1e4b081f61ab26420"), "cache/pre_county_centroids_USA.json", I("county_centroids_USA.json"))
   
   # --- final --- #
   
   preprocess:
     depends:
-      - s3_county_boundaries_json
-      - s3_state_boundaries_json
-      - s3_county_centroids_json
+      - SB_county_boundaries_json
+      - SB_state_boundaries_json
+      - SB_county_centroids_json
