move circles into their own js file

--- a/viz.yaml
+++ b/viz.yaml
@@ -187,6 +187,7 @@ publish:
       projection: "custom_projection"
       map_utils: "map_utils"
       legend_utils: "legend_utils"
+      circle_utils: "circle_utils"
       pie_utils: "pie_utils"
       map_counties: "map_counties"
       map: "build_map"
@@ -197,7 +198,7 @@ publish:
     context:
       resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS",
                   "map_css", "custom_css", "hashes", "projection", "map_utils", "map_counties", 
-                  "legend_utils", "pie_utils"]
+                  "legend_utils", "circle_utils", "pie_utils"]
       sections: ["social","map","description_text", "directions_text"] # adding header and footer here, doubled each on the page
   -
     id: topojson
@@ -223,6 +224,10 @@ publish:
   -
     id: legend_utils
     location: "js/legend_utils.js"
+    mimetype: application/javascript
+  -
+    id: circle_utils
+    location: "js/circle_utils.js"
     mimetype: application/javascript
   -
     id: pie_utils
@@ -283,6 +288,7 @@ publish:
       projection: custom_projection
       map_utils: map_utils
       legend_utils: legend_utils
+      circle_utils: circle_utils
       pie_utils: pie_utils
       map_counties: map_counties
       map: build_map
@@ -294,7 +300,7 @@ publish:
     context:
       resources: ["lib_d3_js", "topojson", 
                   "map_css", "custom_css", "hashes", "projection", "map_utils", 
-                  "map_counties", "legend_utils", "pie_utils"]
+                  "map_counties", "legend_utils", "circle_utils", "pie_utils"]
       embed: ["map","directions_text"]
   -
     id: description_text
