add UA id to yaml

--- a/viz.yaml
+++ b/viz.yaml
@@ -4,7 +4,7 @@ info:
   date: 2018-01-18
   publish-date:
   path: /water-use-15
-  analytics-id:
+  analytics-id: UA-78530187-12
   description: >-
     Data visualization of water use from 1950 - 2015.
   keywords:
