--- a/viz.yaml
+++ b/viz.yaml
@@ -96,21 +96,13 @@ fetch:
       spatial_metadata: spatial_metadata
     comment: sets up the basic view window and projection
   - 
-    id: county_boundaries_topojson
-    location: cache/county_boundaries_USA.json
+    id: all_boundaries_USA_topojson
+    location: cache/all_boundaries_USA.json
     reader: json
     mimetype: application/json
     fetcher: sciencebase
     remoteItemId: "5ab154b1e4b081f61ab26420"
-    remoteFilename: "county_boundaries_USA.json"
-  -
-    id: state_boundaries_topojson
-    location: cache/state_boundaries_USA.json
-    reader: json
-    mimetype: application/json
-    fetcher: sciencebase
-    remoteItemId: "5ab154b1e4b081f61ab26420"
-    remoteFilename: "state_boundaries_USA.json"
+    remoteFilename: "all_boundaries_USA.json"
   -
     id: county_centroids_topojson
     location: cache/county_centroids_USA.json
@@ -165,7 +157,7 @@ process:
     location: cache/county_boundaries_wu.json
     mimetype: application/json
     depends:
-      topo: county_boundaries_topojson
+      topo: all_boundaries_USA_topojson
       wu_data_15_simple: wu_data_15_simple
     processor: merge_centroids_wu
     scripts: [scripts/process/merge_centroids_wu.R]
