--- a/viz.yaml
+++ b/viz.yaml
@@ -31,7 +31,7 @@ info:
       version: 0.7.0
     geojsonio:
       repo: CRAN
-      version: 0.5.0
+      version: 0.6.0
     jsonlite:
       repo: CRAN
       version: 1.5
@@ -96,13 +96,37 @@ fetch:
       spatial_metadata: spatial_metadata
     comment: sets up the basic view window and projection
   - 
-    id: all_boundaries_USA_topojson
-    location: cache/all_boundaries_USA.json
+    id: state_boundaries_USA_topojson
+    location: cache/state_boundaries_USA.json
     reader: json
     mimetype: application/json
     fetcher: sciencebase
     remoteItemId: "5ab154b1e4b081f61ab26420"
-    remoteFilename: "all_boundaries_USA.json"
+    remoteFilename: "state_boundaries_USA.json"
+  -
+    id: state_boundaries_zoom_topojson
+    location: cache/state_boundaries_zoom.json
+    reader: json
+    mimetype: application/json
+    fetcher: sciencebase
+    remoteItemId: "5ab154b1e4b081f61ab26420"
+    remoteFilename: "state_boundaries_zoom.json"
+  -
+    id: county_boundaries_USA_topojson
+    location: cache/county_boundaries_USA.json
+    reader: json
+    mimetype: application/json
+    fetcher: sciencebase
+    remoteItemId: "5ab154b1e4b081f61ab26420"
+    remoteFilename: "county_boundaries_USA.json"
+  -
+    id: county_boundaries_zoom_topojson
+    location: cache/county_boundaries_zoom.json
+    reader: json
+    mimetype: application/json
+    fetcher: sciencebase
+    remoteItemId: "5ab154b1e4b081f61ab26420"
+    remoteFilename: "county_boundaries_zoom.json"
   -
     id: county_centroids_topojson
     location: cache/county_centroids_USA.json
@@ -147,17 +171,32 @@ process:
     id: county_centroids_wu_topojson
     location: cache/county_centroids_wu.json
     mimetype: application/json
+    process_args:
+      layer: centroids
     depends:
       topo: county_centroids_topojson
       wu_data_15_simple: wu_data_15_simple
     processor: merge_centroids_wu
     scripts: [scripts/process/merge_centroids_wu.R]
   -
-    id: county_boundaries_wu_topojson
-    location: cache/county_boundaries_wu.json
+    id: county_boundaries_USA_wu_topojson
+    location: cache/county_boundaries_USA_wu.json
     mimetype: application/json
+    process_args:
+      layer: counties
     depends:
-      topo: all_boundaries_USA_topojson
+      topo: county_boundaries_USA_topojson
+      wu_data_15_simple: wu_data_15_simple
+    processor: merge_centroids_wu
+    scripts: [scripts/process/merge_centroids_wu.R]
+  -
+    id: county_boundaries_zoom_wu_topojson
+    location: cache/county_boundaries_zoom_wu.json
+    mimetype: application/json
+    process_args:
+      layer: counties
+    depends:
+      topo: county_boundaries_zoom_topojson
       wu_data_15_simple: wu_data_15_simple
     processor: merge_centroids_wu
     scripts: [scripts/process/merge_centroids_wu.R]
@@ -196,8 +235,10 @@ publish:
       pie_utils: "pie_utils"
       map_counties: "map_counties"
       map: "build_map"
-      state_boundaries: "state_boundaries_topojson"
-      county_boundaries_wu: "county_boundaries_wu_topojson"
+      state_boundaries_USA_wu: state_boundaries_USA_topojson
+      state_boundaries_zoom_wu: state_boundaries_zoom_topojson
+      county_boundaries_USA_wu: county_boundaries_USA_wu_topojson
+      county_boundaries_zoom_wu: county_boundaries_zoom_wu_topojson
       county_centroids_wu: "county_centroids_wu_topojson"
       wu_data_15_range:  "wu_data_15_range_json"
     context:
@@ -317,8 +358,10 @@ publish:
       map_counties: map_counties
       map: build_map
       directions_text: directions_text
-      state_boundaries: state_boundaries_topojson
-      county_boundaries_wu: county_boundaries_wu_topojson
+      state_boundaries_USA_wu: state_boundaries_USA_topojson
+      state_boundaries_zoom_wu: state_boundaries_zoom_topojson
+      county_boundaries_USA_wu: county_boundaries_USA_wu_topojson
+      county_boundaries_zoom_wu: county_boundaries_zoom_wu_topojson
       county_centroids_wu: county_centroids_wu_topojson
       wu_data_15_range:  wu_data_15_range_json
     context:
