--- a/viz.yaml
+++ b/viz.yaml
@@ -233,6 +233,7 @@ publish:
       symbol_utils: "symbol_utils"
       circle_utils: "circle_utils"
       pie_utils: "pie_utils"
+      map_states: map_states
       map_counties: "map_counties"
       map: "build_map"
       state_boundaries_USA_wu: state_boundaries_USA_topojson
@@ -243,7 +244,7 @@ publish:
       wu_data_15_range:  "wu_data_15_range_json"
     context:
       resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS",
-                  "map_css", "custom_css", "hashes", "projection", "styles", "map_utils", "map_counties", 
+                  "map_css", "custom_css", "hashes", "projection", "styles", "map_utils", "map_states", "map_counties", 
                   "legend_utils", "watermark_utils", "symbol_utils", "circle_utils", "pie_utils"]
       sections: ["social","map","description_text", "directions_text", "key_stories"] # adding header and footer here, doubled each on the page
   -
@@ -290,6 +291,10 @@ publish:
   -
     id: pie_utils
     location: "js/pie_utils.js"
+    mimetype: application/javascript
+  -
+    id: map_states
+    location: "js/states.js"
     mimetype: application/javascript
   -
     id: map_counties
@@ -355,6 +360,7 @@ publish:
       symbol_utils: symbol_utils
       circle_utils: circle_utils
       pie_utils: pie_utils
+      map_states: map_states
       map_counties: map_counties
       map: build_map
       directions_text: directions_text
@@ -366,7 +372,7 @@ publish:
       wu_data_15_range:  wu_data_15_range_json
     context:
       resources: ["lib_d3_js", "topojson", 
-                  "map_css", "custom_css", "hashes", "projection", "styles", "map_utils", 
+                  "map_css", "custom_css", "hashes", "projection", "styles", "map_utils", "map_states",
                   "map_counties", "legend_utils", "watermark_utils", "symbol_utils", "circle_utils", "pie_utils"]
       embed: ["map","directions_text"]
   -
