--- a/viz.yaml
+++ b/viz.yaml
@@ -199,9 +199,7 @@ publish:
       map_utils: "map_utils"
       legend_utils: "legend_utils"
       watermark_utils: "watermark_utils"
-      symbol_utils: "symbol_utils"
       circle_utils: "circle_utils"
-      pie_utils: "pie_utils"
       map_counties: "map_counties"
       map: "build_map"
       state_boundaries: "state_boundaries_topojson"
@@ -211,7 +209,7 @@ publish:
     context:
       resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS",
                   "map_css", "custom_css", "hashes", "projection", "styles", "map_utils", "map_counties", 
-                  "legend_utils", "watermark_utils", "symbol_utils", "circle_utils", "pie_utils"]
+                  "legend_utils", "watermark_utils", "circle_utils"]
       sections: ["social","map","description_text", "directions_text", "key_stories"] # adding header and footer here, doubled each on the page
   -
     id: topojson
@@ -247,16 +245,8 @@ publish:
     location: "js/watermark.js"
     mimetype: application/javascript
   -
-    id: symbol_utils
-    location: "js/symbol_utils.js"
-    mimetype: application/javascript
-  -
     id: circle_utils
     location: "js/circle_utils.js"
-    mimetype: application/javascript
-  -
-    id: pie_utils
-    location: "js/pie_utils.js"
     mimetype: application/javascript
   -
     id: map_counties
@@ -319,9 +309,7 @@ publish:
       map_utils: map_utils
       legend_utils: legend_utils
       watermark_utils: watermark_utils
-      symbol_utils: symbol_utils
       circle_utils: circle_utils
-      pie_utils: pie_utils
       map_counties: map_counties
       map: build_map
       directions_text: directions_text
@@ -332,7 +320,7 @@ publish:
     context:
       resources: ["lib_d3_js", "topojson", 
                   "map_css", "custom_css", "hashes", "projection", "styles", "map_utils", 
-                  "map_counties", "legend_utils", "watermark_utils", "symbol_utils", "circle_utils", "pie_utils"]
+                  "map_counties", "legend_utils", "watermark_utils", "circle_utils"]
       embed: ["map","directions_text"]
   -
     id: description_text
