Removing the 1950 bit

--- a/viz.yaml
+++ b/viz.yaml
@@ -6,7 +6,7 @@ info:
   path: /water-use-15
   analytics-id: UA-78530187-12
   description: >-
-    Data visualization of water use from 1950 - 2015.
+    Data visualization of water use.
   keywords:
   audience:
   url:
