The period looks weird now that we can see it in the tab

--- a/viz.yaml
+++ b/viz.yaml
@@ -1,6 +1,6 @@
 info:
   id: water-use-15
-  name: U.S. Water Use.
+  name: U.S. Water Use
   date: 2018-01-18
   publish-date:
   path: /water-use-15
