--- a/viz.yaml
+++ b/viz.yaml
@@ -228,7 +228,7 @@ publish:
       styles: "styles"
       map_utils: "map_utils"
       watermark_utils: "watermark_utils"
-      circle_utils: "circle_utils"
+      map_circles: map_circles
       map_states: map_states
       map_counties: "map_counties"
       map: "build_map"
@@ -241,7 +241,7 @@ publish:
     context:
       resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS",
                   "map_css", "custom_css", "hashes", "projection", "styles", "map_utils", "map_states", "map_counties", 
-                  "watermark_utils", "circle_utils"]
+                  "watermark_utils", "map_circles"]
       sections: ["social","map", "directions_text", "key_stories"] # adding header and footer here, doubled each on the page
   -
     id: topojson
@@ -273,8 +273,8 @@ publish:
     location: "js/watermark.js"
     mimetype: application/javascript
   -
-    id: circle_utils
-    location: "js/circle_utils.js"
+    id: map_circles
+    location: "js/circles.js"
     mimetype: application/javascript
   -
     id: map_states
@@ -340,7 +340,7 @@ publish:
       styles: styles
       map_utils: map_utils
       watermark_utils: watermark_utils
-      circle_utils: circle_utils
+      map_circles: map_circles
       map_states: map_states
       map_counties: map_counties
       map: build_map
@@ -354,7 +354,7 @@ publish:
     context:
       resources: ["lib_d3_js", "topojson", 
                   "map_css", "custom_css", "hashes", "projection", "styles", "map_utils", "map_states",
-                  "map_counties", "watermark_utils", "circle_utils"]
+                  "map_counties", "watermark_utils", "map_circles"]
       embed: ["map","directions_text"]
 
   -
