--- a/viz.yaml
+++ b/viz.yaml
@@ -227,7 +227,6 @@ publish:
       projection: "custom_projection"
       styles: "styles"
       map_utils: "map_utils"
-      rank_states_utils: "rank_states_utils"
       watermark_utils: "watermark_utils"
       circle_utils: "circle_utils"
       map_states: map_states
@@ -243,7 +242,7 @@ publish:
       resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS",
                   "map_css", "custom_css", "hashes", "projection", "styles", "map_utils", "map_states", "map_counties", 
                   "watermark_utils", "circle_utils"]
-      sections: ["social","map", "directions_text", "key_stories", "rank_states_utils"] # adding header and footer here, doubled each on the page
+      sections: ["social","map", "directions_text", "key_stories"] # adding header and footer here, doubled each on the page
 
   -
     id: topojson
@@ -309,6 +308,8 @@ publish:
     id: key_stories
     template: layout/templates/key_stories.mustache
     depends: "rank_states_utils"
+    context:
+      sections: ["rank_states_utils"]
     publisher: section
   -
     id: footer_section
