--- a/viz.yaml
+++ b/viz.yaml
@@ -168,35 +168,13 @@ process:
     processor: find_range
     scripts: [scripts/process/find_range.R]
   -
-    id: county_centroids_wu_topojson
+    id: county_centroids_wu_json
     location: cache/county_centroids_wu.json
     mimetype: application/json
     process_args:
       layer: centroids
     depends:
       topo: county_centroids_topojson
-      wu_data_15_simple: wu_data_15_simple
-    processor: merge_centroids_wu
-    scripts: [scripts/process/merge_centroids_wu.R]
-  -
-    id: county_boundaries_USA_wu_topojson
-    location: cache/county_boundaries_USA_wu.json
-    mimetype: application/json
-    process_args:
-      layer: counties
-    depends:
-      topo: county_boundaries_USA_topojson
-      wu_data_15_simple: wu_data_15_simple
-    processor: merge_centroids_wu
-    scripts: [scripts/process/merge_centroids_wu.R]
-  -
-    id: county_boundaries_zoom_wu_topojson
-    location: cache/county_boundaries_zoom_wu.json
-    mimetype: application/json
-    process_args:
-      layer: counties
-    depends:
-      topo: county_boundaries_zoom_topojson
       wu_data_15_simple: wu_data_15_simple
     processor: merge_centroids_wu
     scripts: [scripts/process/merge_centroids_wu.R]
@@ -232,11 +210,11 @@ publish:
       map_states: map_states
       map_counties: "map_counties"
       map: "build_map"
-      state_boundaries_USA_wu: state_boundaries_USA_topojson
-      state_boundaries_zoom_wu: state_boundaries_zoom_topojson
-      county_boundaries_USA_wu: county_boundaries_USA_wu_topojson
-      county_boundaries_zoom_wu: county_boundaries_zoom_wu_topojson
-      county_centroids_wu: "county_centroids_wu_topojson"
+      state_boundaries_USA: state_boundaries_USA_topojson
+      state_boundaries_zoom: state_boundaries_zoom_topojson
+      county_boundaries_USA: county_boundaries_USA_topojson
+      county_boundaries_zoom: county_boundaries_zoom_topojson
+      county_centroids_wu: "county_centroids_wu_json"
       wu_data_15_range:  "wu_data_15_range_json"
     context:
       resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS",
@@ -353,11 +331,11 @@ publish:
       map_counties: map_counties
       map: build_map
       directions_text: directions_text
-      state_boundaries_USA_wu: state_boundaries_USA_topojson
-      state_boundaries_zoom_wu: state_boundaries_zoom_topojson
-      county_boundaries_USA_wu: county_boundaries_USA_wu_topojson
-      county_boundaries_zoom_wu: county_boundaries_zoom_wu_topojson
-      county_centroids_wu: county_centroids_wu_topojson
+      state_boundaries_USA: state_boundaries_USA_topojson
+      state_boundaries_zoom: state_boundaries_zoom_topojson
+      county_boundaries_USA: county_boundaries_USA_topojson
+      county_boundaries_zoom: county_boundaries_zoom_topojson
+      county_centroids_wu: county_centroids_wu_json
       wu_data_15_range:  wu_data_15_range_json
     context:
       resources: ["lib_d3_js", "topojson", 
