--- a/viz.yaml
+++ b/viz.yaml
@@ -215,6 +215,7 @@ publish:
       header_css: "lib-header-css"
       footer_css: "lib-footer-css"
       content_css: "lib-content-css"
+      vizlab-favicon: "lib-vizlab-favicon"
       map_css: "map_css"
       custom_css: "custom_css"
       social: "social_section"
@@ -239,7 +240,7 @@ publish:
       county_centroids_wu: "county_centroids_wu_topojson"
       wu_data_15_range:  "wu_data_15_range_json"
     context:
-      resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS",
+      resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS","vizlab-favicon",
                   "map_css", "custom_css", "hashes", "projection", "styles", "map_utils", "map_states", "map_counties", 
                   "watermark_utils", "circle_utils"]
       sections: ["social","map", "directions_text", "key_stories"] # adding header and footer here, doubled each on the page
