--- a/viz.yaml
+++ b/viz.yaml
@@ -230,7 +230,7 @@ publish:
     context:
       resources: ["lib_d3_js", "topojson", "header_css", "content_css", "footer_css", "socialCSS","vizlab-favicon",
                   "map_css", "custom_css", "hashes", "projection", "styles", "map_utils", "map_states", "map_counties",
-                  "watermark_utils", "circle_utils"]
+                  "watermark_utils", "map_circles"]
       sections: ["social", "mobile_map_ui", "map", "directions_text", "key_stories"] # adding header and footer here, doubled each on the page
   -
     id: topojson
